# rbyrct-mlops

./: README.md
configs/experiments/: exp_0001_mart_unet.yaml  exp_mart_baseline_full_001.yaml  exp_mart_baseline_full_002.yaml  exp_mart_baseline_full_003.yaml  exp_mart_lowdose_0p25x_001.yaml  exp_mart_lowdose_0p5x_001.yaml  exp_mart_lowdose_unet_0o1x_001.yaml  exp_mart_lowdose_unet_0p25x_001.yaml  exp_mart_lowdose_unet_90deg_001.yaml  exp_mart_sparse_60deg_001.yaml  exp_mart_sparse_90deg_001.yaml
data/raw/topas_runs/topas_run_0001/: geometry.json  phantom.npy
experiments/: README.md
experiments/exp_0001_mart_unet/: metadata.json  metrics.csv  volume_recon.npy
rust-services/recon-core/: Cargo.toml
rust-services/recon-core/src/: lib.rs
scripts/: generate_synthetic_runs.py  make_toy_topas_run.py  run_full_pipeline.py  summarize_experiments.py
