[package]
name = "recon-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "recon_core"
path = "src/lib.rs"

[[bin]]
name = "mart_cli"
path = "src/bin/mart_cli.rs"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.15"
rand = "0.8"
ndarray-npy = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
